--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -3,8 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Buy Local Art!</title>
+    <link rel="stylesheet" href="/static/css/main.css" />
 </head>
 <body>
-
+    <h1>This will be a kickass index page!!</h1>
+    <img src="/static/images/logo.jpg" alt="Picture of logo" />
 </body>
 </html>
