Last push of the night

--- a/buylocalartor/templates/pdxart/base.html
+++ b/buylocalartor/templates/pdxart/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head lang="en">
@@ -11,6 +12,11 @@
 
     <body>
         <form id="stream">
+            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
+            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
+            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
+            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
+            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
