--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -1,23 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Buy Local Art!</title>
-    <link rel="stylesheet" href="/static/css/main.css" />
-</head>
-<body>
-    <h1>This will be a kickass index page!!</h1>
-    <img src="/static/images/logo.jpg" alt="Picture of logo" />
+{% extends "pdxart/base.html" %}
 
-    {% if products %}
-        <ul>
-            {% for product in products %}
-                <li>{{ product.name }}</li>
-                {% endfor %}
-        </ul>
-        {% else %}
-        <strong>There are no products present.</strong>
-        {% endif %}
-
-</body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head lang="en">#}
+{#    <meta charset="UTF-8">#}
+{#    <title>Buy Local Art!</title>#}
+{#    <link rel="stylesheet" href="/static/css/main.css" />#}
+{#</head>#}
+{#<body>#}
+{#    <h1>This will be a kickass index page!!</h1>#}
+{#    <img src="/static/images/logo.jpg" alt="Picture of logo" />#}
+{##}
+{#    {% if products %}#}
+{#        <ul>#}
+{#            {% for product in products %}#}
+{#                <li>{{ product.name }}</li>#}
+{#                {% endfor %}#}
+{#        </ul>#}
+{#        {% else %}#}
+{#        <strong>There are no products present.</strong>#}
+{#        {% endif %}#}
+{##}
+{#</body>#}
+{#</html>#}
