--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Registration page</title>
-        <script src="registration.js"></script>
+{#        <script src="registration.js"></script>#}
   </head>
   <body>
     <fieldset>
@@ -10,12 +10,14 @@
             Create an account
         </legend>
     <div id="login_box">
-      <form method="post" id="registration">
+      <form method="POST" id="registration">
         <div id="errors" style="color: red;"></div>
 
 {#TODO: Add profile picture#}
-
-        Username:    <input value="" name="username" id="username"><br>         
+{% csrf_token %}
+        First Name:<input value="" name="firstname" id="firstname"><br>
+        Last Name:<input value="" name="lastname" id="lastname"><br>
+        Username: <input value="" name="username" id="username"><br>
         Password: <input type="password" name="password" id="password"><br>
         Verify password: <input type="password" name="verify_password" id="verify_password"><br>
         Email: <input type="email" name="email" id="email"><br>
@@ -26,10 +28,10 @@
         LinkedIn: <input value="" name="linkedin" id="linkedin"><br>
         Street address: <input value="" name="address" id="address"><br>
         Tell us about yourself: <input value="" name="bio" id="bio"><br>
-      </form>
+
     <p>
 
-{#TODO: How should I store this in the database? Add it to the form?#}
+
         How did you hear about us?
         <select size="1">
             <option>Friend/Family member</option>
@@ -38,8 +40,9 @@
             <option>Fellow artist</option>
         </select></p>
         <input type="checkbox" value="Yes" name="updates">Sign me up for email updates</input>
+        <br>
       <input type="submit" value="Register">
-    </div>
+    </div></form>
     </fieldset>
   </body>
 </html>
