Last push of the night

--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -22,6 +22,11 @@
         Verify password: <input type="password" name="verify_password" id="verify_password"><br>
         Email: <input type="email" name="email" id="email"><br>
         Date of birth: <input type="date" name="dob" id="dob"><br>
+        Gender = <select value="">
+          <option>Female</option>
+          <option>Male</option>
+          <option>Transgendered</option>
+          <option>Prefer not to answer</option></select><br>
         Website: <input value="" name="website" id="website"><br>
         Facebook: <input value="" name="facebook" id="facebook"><br>
         Twitter: <input value="" name="twitter" id="twitter"><br>
