--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -14,10 +14,14 @@
         <div id="errors" style="color: red;"></div>
 
 {#TODO: Add profile picture#}
+{#          get working again, set image default in templates #}
+{#          os.rename for renaming to username, then resize#}
+{#          #}
 {% csrf_token %}
         First Name:<input value="" name="firstname" id="firstname"><br>
         Last Name:<input value="" name="lastname" id="lastname"><br>
         Username: <input value="" name="username" id="username"><br>
+{#        Profile Picture: <img src="{{ item.avatar_image_url }}" alt="profile pic"/><br>#}
         Password: <input type="password" name="password" id="password"><br>
         Verify password: <input type="password" name="verify_password" id="verify_password"><br>
         Email: <input type="email" name="email" id="email"><br>
