--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -13,17 +13,14 @@
       <form method="POST" id="registration">
         <div id="errors" style="color: red;"></div>
 
-{#TODO: Add profile picture#}
-{#          get working again, set image default in templates #}
-{#          os.rename for renaming to username, then resize#}
-{#          #}
+
 {% csrf_token %}
         First Name:<input value="" name="firstname" id="firstname"><br>
         Last Name:<input value="" name="lastname" id="lastname"><br>
         Username: <input value="" name="username" id="username"><br>
 {#        Profile Picture: <img src="{{ item.avatar_image_url }}" alt="profile pic"/><br>#}
         Password: <input type="password" name="password" id="password"><br>
-        Verify password: <input type="password" name="verify_password" id="verify_password"><br>
+{#        Verify password: <input type="password" name="verify_password" id="verify_password"><br>#}
         Email: <input type="email" name="email" id="email"><br>
         Date of birth: <input type="date" name="dob" id="dob"><br>
         Gender = <select value="">
@@ -31,12 +28,6 @@
           <option>Male</option>
           <option>Transgendered</option>
           <option>Prefer not to answer</option></select><br>
-        Website: <input value="" name="website" id="website"><br>
-        Facebook: <input value="" name="facebook" id="facebook"><br>
-        Twitter: <input value="" name="twitter" id="twitter"><br>
-        LinkedIn: <input value="" name="linkedin" id="linkedin"><br>
-        Street address: <input value="" name="address" id="address"><br>
-        Tell us about yourself: <input value="" name="bio" id="bio"><br>
 
     <p>
 
