Tomorrow's goal: Register user, update profile (info is populated with info from register)

--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -15,19 +15,20 @@
 
 
 {% csrf_token %}
-        First Name:<input value="" name="firstname" id="firstname"><br>
-        Last Name:<input value="" name="lastname" id="lastname"><br>
-        Username: <input value="" name="username" id="username"><br>
+{#        First Name:<input value="" name="firstname" id="firstname"><br>#}
+{#        Last Name:<input value="" name="lastname" id="lastname"><br>#}
+{#        Username: <input value="" name="username" id="username"><br>#}
 {#        Profile Picture: <img src="{{ item.avatar_image_url }}" alt="profile pic"/><br>#}
+        Email: <input type="email" name="email" id="email"><br>
         Password: <input type="password" name="password" id="password"><br>
 {#        Verify password: <input type="password" name="verify_password" id="verify_password"><br>#}
-        Email: <input type="email" name="email" id="email"><br>
-        Date of birth: <input type="date" name="dob" id="dob"><br>
-        Gender = <select value="">
-          <option>Female</option>
-          <option>Male</option>
-          <option>Transgendered</option>
-          <option>Prefer not to answer</option></select><br>
+
+{#        Date of birth: <input type="date" name="dob" id="dob"><br>#}
+{#        Gender = <select value="">#}
+{#          <option>Female</option>#}
+{#          <option>Male</option>#}
+{#          <option>Transgendered</option>#}
+{#          <option>Prefer not to answer</option></select><br>#}
 
     <p>
 
@@ -39,6 +40,9 @@
             <option>Internet ad</option>
             <option>Fellow artist</option>
         </select></p>
+        <input type="checkbox" value="Yes" name="agree">I agree to follow the Terms and Conditions</input>
+{#          TODO: Require this box to be checked before moving on#}
+          <br>
         <input type="checkbox" value="Yes" name="updates">Sign me up for email updates</input>
         <br>
       <input type="submit" value="Register">
