Beginning work of the night

--- a/buylocalartor/templates/pdxart/base.html
+++ b/buylocalartor/templates/pdxart/base.html
@@ -11,9 +11,8 @@
         Artist Medium | Categories?</ul></nav>
 
     <body>
+    {% block content %} {% endblock %}
         <form id="stream">
-            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
-            <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
             <img src="/static/images/placeholder.jpg" alt="image" class="filler" />
