--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -1,5 +1,11 @@
 {% extends "pdxart/base.html" %}
 
+{% block content %}
+
+    <a href="registration.html">Register</a><br>
+<a href="updateprofile.html">Update Profile</a><br>
+
+{% endblock %}
 {#<!DOCTYPE html>#}
 {#<html>#}
 {#<head lang="en">#}
