--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -2,13 +2,16 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    <h1>Welcome back {{ user.username }}!</h1>
-{% else %}
-<h1>Welcome Art-Supporter!</h1>
-{% endif %}
-    <a href="{% url 'login' %}">Login</a><br>
-    <a href="{% url 'registration' %}">Register</a><br>
-    <a href="{% url 'updateprofile' %}">Update Profile</a><br>
+        <h1>Welcome back {{ user.username }}!</h1>
+        <a href="/pdxart/logout/">Logout</a><br />
+        <a href="{% url 'updateprofile' %}">Update Profile</a><br>
+
+    {% else %}
+        <h1>Welcome Art-Supporter!</h1>
+        <a href="{% url 'login' %}">Login</a><br>
+        <a href="{% url 'registration' %}">Register</a><br>
+
+    {% endif %}
 
 {% endblock %}
 {#<!DOCTYPE html>#}
