--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -23,7 +23,7 @@
         Password: <input type="password" name="password" id="password"><br>
 {#        Verify password: <input type="password" name="verify_password" id="verify_password"><br>#}
 
-{#        Date of birth: <input type="date" name="dob" id="dob"><br>#}
+        Date of birth: <input type="date" name="dob" id="dob"><br>
 {#        Gender = <select value="">#}
 {#          <option>Female</option>#}
 {#          <option>Male</option>#}
