Inventory page beginning

--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -3,8 +3,9 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h1>Welcome back!</h1>
-        <a href="/pdxart/logout/">Logout</a><br />
+        <a href="/pdxart/logout/">Logout</a><br>
         <a href="{% url 'updateprofile' %}">Update Profile</a><br>
+        <a href="{% url 'inventory' %}">Add inventory</a><br>
 
     {% else %}
         <h1>Welcome Art-Supporter!</h1>
