--- a/buylocalartor/templates/pdxart/inventory.html
+++ b/buylocalartor/templates/pdxart/inventory.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Inventory</title>
 </head>
 <body>
 <h1>{{ category_name }}</h1>
