--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h1>Welcome back!</h1>
-        <a href="/pdxart/logout/">Logout</a><br>
+        <a href="{% url 'logout' %}">Logout</a><br>
         <a href="{% url 'updateprofile' %}">Update Profile</a><br>
         <a href="{% url 'inventory' %}">Add inventory</a><br>
 
@@ -15,26 +15,3 @@
     {% endif %}
 
 {% endblock %}
-{#<!DOCTYPE html>#}
-{#<html>#}
-{#<head lang="en">#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Buy Local Art!</title>#}
-{#    <link rel="stylesheet" href="/static/css/main.css" />#}
-{#</head>#}
-{#<body>#}
-{#    <h1>This will be a kickass index page!!</h1>#}
-{#    <img src="/static/images/logo.jpg" alt="Picture of logo" />#}
-{##}
-{#    {% if products %}#}
-{#        <ul>#}
-{#            {% for product in products %}#}
-{#                <li>{{ product.name }}</li>#}
-{#                {% endfor %}#}
-{#        </ul>#}
-{#        {% else %}#}
-{#        <strong>There are no products present.</strong>#}
-{#        {% endif %}#}
-{##}
-{#</body>#}
-{#</html>#}
