--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -6,6 +6,7 @@
         <a href="{% url 'logout' %}">Logout</a><br>
         <a href="{% url 'updateprofile' %}">Update Profile</a><br>
         <a href="{% url 'inventory' %}">Add inventory</a><br>
+        <a href="{% url 'addinventory' %}">Add inventory</a><br>
 
     {% else %}
         <h1>Welcome Art-Supporter!</h1>
