--- a/buylocalartor/templates/pdxart/index.html
+++ b/buylocalartor/templates/pdxart/index.html
@@ -5,7 +5,7 @@
         <h1>Welcome back!</h1>
         <a href="{% url 'logout' %}">Logout</a><br>
         <a href="{% url 'updateprofile' %}">Update Profile</a><br>
-        <a href="{% url 'inventory' %}">Add inventory</a><br>
+        <a href="{% url 'inventory' %}">Current inventory</a><br>
         <a href="{% url 'addinventory' %}">Add inventory</a><br>
 
     {% else %}
