--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -22,7 +22,7 @@
         Email: <input type="email" name="email" id="email"><br>
         Password: <input type="password" name="password" id="password"><br>
 {#        Verify password: <input type="password" name="verify_password" id="verify_password"><br>#}
-
+        Profile picture: <input type="file" name="profilepic" id="profilepic"><br>
         Date of birth: <input type="date" name="dob" id="dob"><br>
 {#        Gender = <select value="">#}
 {#          <option>Female</option>#}
@@ -46,7 +46,7 @@
         <input type="checkbox" value="Yes" name="updates">Sign me up for email updates</input>
         <br>
       <input type="submit" value="Register">
-    </div></form>
+    </form></div>
     </fieldset>
 
   </body>
