Cleaned up models and some views from commented out code

--- a/buylocalartor/templates/pdxart/updateprofile.html
+++ b/buylocalartor/templates/pdxart/updateprofile.html
@@ -13,10 +13,16 @@
 
         </div>
 <div class="value">
-    Email: <input value="{{ profile.email }}"/>Email<br>
+    Email: <input value="{{ profile.email }}"/><br>
     First name: <input value="{{ profile.firstname }}"/><br>
     Last name: <input value="{{ profile.lastname }}"/><br>
 {#    Password: <input value="{{ profile.password }}"/><br>#}
+{#    Gender = <select value="">#}
+{#      <option>Female</option>#}
+{#      <option>Male</option>#}
+{#      <option>Transgendered</option>#}
+{#      <option>Prefer not to answer</option></select><br>#}
+
     Website: <input value="{{ profile.website }}"/><br>
     Facebook page: <input value="{{ profile.facebook }}"/><br>
     Twitter: <input value="{{ profile.twitter }}"/><br>
