Cleaned up more code, about to add immediate log in from registration or rename image at upload

--- a/buylocalartor/templates/pdxart/addinventory.html
+++ b/buylocalartor/templates/pdxart/addinventory.html
@@ -10,7 +10,7 @@
             Add a new item
         </legend>
     <div id="newitem_box">
-      <form method="POST" id="newitem">
+      <form method="POST" id="newitem" enctype="multipart/form-data">
         <div id="errors" style="color: red;"></div>
 
         Medium = <select value="" name="medium">
@@ -24,7 +24,7 @@
         Price: $<input type="number" name="price" min="1"><br><br>
         Description (500 words or less): <br><textarea style="width: 300px; height: 100px" name="description" type="text"></textarea><br>
 {#          TODO: Show how many characters are currently in box (of 500)#}
-{#        Profile Picture: <img src="{{ item.avatar_image_url }}" alt="profile pic"/><br>#}
+        Item image: <input type="file" name="item_image_upload" multiple><br><br>
        <br>
       <input type="submit" value="Post Item">
     </form></div>
