--- a/buylocalartor/templates/pdxart/registration.html
+++ b/buylocalartor/templates/pdxart/registration.html
@@ -18,10 +18,9 @@
         Password: <input type="password" name="password" id="password"><br>
         Profile picture: <input type="file" name="image_upload" multiple><br>
         Date of birth: <input type="date" name="dob" id="dob"><br>
-
     <p>
-
         How did you hear about us?
+{#        TODO: Need to collect this response in views & store in DB#}
         <select size="1">
             <option>Friend/Family member</option>
             <option>Radio ad</option>
