--- a/buylocalartor/templates/pdxart/updateprofile.html
+++ b/buylocalartor/templates/pdxart/updateprofile.html
@@ -27,7 +27,7 @@
     Facebook page: <input value="{{ profile.facebook }}"/><br>
     Twitter: <input value="{{ profile.twitter }}"/><br>
     LinkedIn: <input value="{{ profile.linkedin }}"/><br>
-{#    <input value="{{ profile.dob }}"/><br>#}
+    Date of birth: <input value="{{ profile.dob }}"/><br>
     A little about you (500 word limit): <input value="{{ profile.bio }}"/><br>
 </div>
 
