Tonight's goal: Make everything look pretty

--- a/buylocalartor/templates/pdxart/base.html
+++ b/buylocalartor/templates/pdxart/base.html
@@ -7,8 +7,8 @@
         <title>Buy Local Art!</title>
     </head>
 
-    <nav><ul class ="nav_tags">LOGO HERE | Search Bar | Register (or welcome & mail) | CART<br>
-        Artist Medium | Categories?</ul></nav>
+    <nav><ul class ="nav_tags">
+        <a href="index.html"></a><img src="/static/images/logo.png" alt="logo"></a> | Search Bar | <div id="navbar"></div> | CART | Artist Medium | Categories</ul></nav>
 
     <body>
     {% block content %} {% endblock %}
