--- a/buylocalartor/templates/pdxart/updateprofile.html
+++ b/buylocalartor/templates/pdxart/updateprofile.html
@@ -10,7 +10,6 @@
 {% block content %}
     <div id="body">
     <P ALIGN=Center><h2>Update your profile</h2></P ALIGN=Center>
-
         </div>
 <div class="value">
     Email: <input value="{{ profile.email }}"/><br>
@@ -28,27 +27,10 @@
     Twitter: <input value="{{ profile.twitter }}"/><br>
     LinkedIn: <input value="{{ profile.linkedin }}"/><br>
     Date of birth: <input value="{{ profile.dob }}"/><br>
-    A little about you (500 word limit): <input value="{{ profile.bio }}"/><br>
+    Why do you like art? (500 word limit): <input value="{{ profile.bio }}"/><br>
 </div>
 
 {% endblock %}
-{#<fieldset>#}
-{#    <legend>Edit Your Profile</legend>#}
-{#      <form role="form" method="POST" id="update" action=".">#}
-{#      {% csrf_token %}#}
-{#        First Name:<input value="" name="firstname" id="firstname"><br>#}
-{#        Last Name:<input value="" name="lastname" id="lastname"><br>#}
-{#        Business name: <input value="" name="profilename" id="profilename"><br>#}
-{#        Profile Picture: <img src="{{ item.avatar_image_url }}" alt="profile pic"/><br>#}
-{#        Password: <input type="password" name="password" id="password"><br>#}
-{#        Email: <input type="email" name="email" id="email"><br>#}
-{#        Website: <input type="" name="website" id="website"><br>#}
-{#        Facebook: <input type="" name="facebook" id="facebook"><br>#}
-{#        Twitter: <input type="" name="twitter" id="twitter"><br>#}
-{#        LinkedIn: <input type="" name="linkedin" id="linkedin"><br>#}
-{#        Why do you like art?: <input type="" name="bio" id="bio"><br>#}
-{#      <input type="submit" value="Update">#}
-{#    </form>#}
-{#    </fieldset>#}
+
 </body>
 </html>
