Prepping for bootstrap or HTML template

--- a/buylocalartor/templates/pdxart/base.html
+++ b/buylocalartor/templates/pdxart/base.html
@@ -8,7 +8,8 @@
     </head>
 
     <nav><ul class ="nav_tags">
-        <a href="index.html"></a><img src="/static/images/logo.png" alt="logo"></a> | Search Bar | <div id="navbar"></div> | CART | Artist Medium | Categories</ul></nav>
+        <a href="index.html"></a><img src="/static/images/logo.png" alt="logo"></a> | Search Bar | <div id="navbar">
+            </div> | CART | Artist Medium | Categories</ul></nav>
 
     <body>
     {% block content %} {% endblock %}
