--- a/buylocalartor/templates/pdxart/index_new.html
+++ b/buylocalartor/templates/pdxart/index_new.html
@@ -3,84 +3,87 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Home | E-Shopper</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
-    <link href="css/price-range.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
-	<link href="css/responsive.css" rel="stylesheet">
+    <meta name="description" content="Ecommerce site exclusive to Oregon artists">
+    <meta name="author" content="Mikey Bedney">
+    <title>Buy Local Art!</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/prettyPhoto.css" rel="stylesheet">
+    <link href="/static/css/price-range.css" rel="stylesheet">
+    <link href="/static/css/animate.css" rel="stylesheet">
+	<link href="/static/css/main.css" rel="stylesheet">
+	<link href="/static/css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->       
-    <link rel="shortcut icon" href="images/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <script src="/static/js/html5shiv.js"></script>
+    <script src="/static/js/respond.min.js"></script>
+    <![endif]-->
+	<!--TODO: Update for mobile when ready to go live-->
+    <!--<link rel="shortcut icon" href="/static/images/ico/favicon.ico">-->
+    <!--<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/images/ico/apple-touch-icon-144-precomposed.png">-->
+    <!--<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/images/ico/apple-touch-icon-114-precomposed.png">-->
+    <!--<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/images/ico/apple-touch-icon-72-precomposed.png">-->
+    <!--<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png">-->
 </head><!--/head-->
 
 <body>
 	<header id="header"><!--header-->
-		<div class="header_top"><!--header_top-->
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="contactinfo">
-							<ul class="nav nav-pills">
-								<li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
-								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-6">
-						<div class="social-icons pull-right">
-							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div><!--/header_top-->
+		<!--header_top-->
+		<!--<div class="header_top">-->
+			<!--<div class="container">-->
+				<!--<div class="row">-->
+					<!--<div class="col-sm-6">-->
+						<!--<div class="contactinfo">-->
+							<!--<ul class="nav nav-pills">-->
+								<!--<li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>-->
+								<!--<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li>-->
+							<!--</ul>-->
+						<!--</div>-->
+					<!--</div>-->
+					<!--<div class="col-sm-6">-->
+						<!--<div class="social-icons pull-right">-->
+							<!--<ul class="nav navbar-nav">-->
+								<!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+								<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+								<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
+								<!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+							<!--</ul>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--/header_top-->
 		
 		<div class="header-middle"><!--header-middle-->
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="logo pull-left">
-							<a href="index_new.html"><img src="/static/images/logo.png" alt="Logo" /></a>
+							<a href="index_new.html"><img src="/static/images/logo.png" alt="Logo" id="logo"/>PDX ART</a>
 						</div>
-						<div class="btn-group pull-right">
-							<div class="btn-group">
-								<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-									USA
-									<span class="caret"></span>
-								</button>
+						<!--<div class="btn-group pull-right">-->
+							<!--<div class="btn-group">-->
+								<!--<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">-->
+									<!--USA-->
+									<!--<span class="caret"></span>-->
+								<!--</button>-->
 								<!--<ul class="dropdown-menu">-->
 									<!--<li><a href="#">Canada</a></li>-->
 									<!--<li><a href="#">UK</a></li>-->
 								<!--</ul>-->
 							<!--</div>-->
-							<!-- -->
+
 							<!--<div class="btn-group">-->
 								<!--<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">-->
 									<!--DOLLAR-->
 									<!--<span class="caret"></span>-->
 								<!--</button>-->
-								<ul class="dropdown-menu">
-									<li><a href="#">Canadian Dollar</a></li>
-									<li><a href="#">Pound</a></li>
-								</ul>
-							</div>
+								<!--<ul class="dropdown-menu">-->
+									<!--<li><a href="#">Canadian Dollar</a></li>-->
+									<!--<li><a href="#">Pound</a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
 						</div>
 					</div>
 					<div class="col-sm-8">
@@ -143,70 +146,72 @@
 		</div><!--/header-bottom-->
 	</header><!--/header-->
 	
-	<section id="slider"><!--slider-->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div id="slider-carousel" class="carousel slide" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<li data-target="#slider-carousel" data-slide-to="0" class="active"></li>
-							<li data-target="#slider-carousel" data-slide-to="1"></li>
-							<li data-target="#slider-carousel" data-slide-to="2"></li>
-						</ol>
-						
-						<div class="carousel-inner">
-							<div class="item active">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free E-Commerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img src="images/home/girl1.jpg" class="girl img-responsive" alt="" />
-									<img src="images/home/pricing.png"  class="pricing" alt="" />
-								</div>
-							</div>
-							<div class="item">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>100% Responsive Design</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img src="images/home/girl2.jpg" class="girl img-responsive" alt="" />
-									<img src="images/home/pricing.png"  class="pricing" alt="" />
-								</div>
-							</div>
-							
-							<div class="item">
-								<div class="col-sm-6">
-									<h1><span>E</span>-SHOPPER</h1>
-									<h2>Free Ecommerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
-								</div>
-								<div class="col-sm-6">
-									<img src="images/home/girl3.jpg" class="girl img-responsive" alt="" />
-									<img src="images/home/pricing.png" class="pricing" alt="" />
-								</div>
-							</div>
-							
-						</div>
-						
-						<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">
-							<i class="fa fa-angle-left"></i>
-						</a>
-						<a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">
-							<i class="fa fa-angle-right"></i>
-						</a>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-	</section><!--/slider-->
+	<!--slider-->
+	<!--<section id="slider">-->
+		<!--<div class="container">-->
+			<!--<div class="row">-->
+				<!--<div class="col-sm-12">-->
+					<!--<div id="slider-carousel" class="carousel slide" data-ride="carousel">-->
+						<!--<ol class="carousel-indicators">-->
+							<!--<li data-target="#slider-carousel" data-slide-to="0" class="active"></li>-->
+							<!--<li data-target="#slider-carousel" data-slide-to="1"></li>-->
+							<!--<li data-target="#slider-carousel" data-slide-to="2"></li>-->
+						<!--</ol>-->
+						<!-- -->
+						<!--<div class="carousel-inner">-->
+							<!--<div class="item active">-->
+								<!--<div class="col-sm-6">-->
+									<!--<h1><span>E</span>-SHOPPER</h1>-->
+									<!--<h2>Free E-Commerce Template</h2>-->
+									<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
+									<!--<button type="button" class="btn btn-default get">Get it now</button>-->
+								<!--</div>-->
+								<!--<div class="col-sm-6">-->
+									<!--<img src="images/home/girl1.jpg" class="girl img-responsive" alt="" />-->
+									<!--<img src="images/home/pricing.png"  class="pricing" alt="" />-->
+								<!--</div>-->
+							<!--</div>-->
+							<!--<div class="item">-->
+								<!--<div class="col-sm-6">-->
+									<!--<h1><span>E</span>-SHOPPER</h1>-->
+									<!--<h2>100% Responsive Design</h2>-->
+									<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
+									<!--<button type="button" class="btn btn-default get">Get it now</button>-->
+								<!--</div>-->
+								<!--<div class="col-sm-6">-->
+									<!--<img src="images/home/girl2.jpg" class="girl img-responsive" alt="" />-->
+									<!--<img src="images/home/pricing.png"  class="pricing" alt="" />-->
+								<!--</div>-->
+							<!--</div>-->
+							<!-- -->
+							<!--<div class="item">-->
+								<!--<div class="col-sm-6">-->
+									<!--<h1><span>E</span>-SHOPPER</h1>-->
+									<!--<h2>Free Ecommerce Template</h2>-->
+									<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>-->
+									<!--<button type="button" class="btn btn-default get">Get it now</button>-->
+								<!--</div>-->
+								<!--<div class="col-sm-6">-->
+									<!--<img src="images/home/girl3.jpg" class="girl img-responsive" alt="" />-->
+									<!--<img src="images/home/pricing.png" class="pricing" alt="" />-->
+								<!--</div>-->
+							<!--</div>-->
+							<!-- -->
+						<!--</div>-->
+						<!-- -->
+						<!--<a href="#slider-carousel" class="left control-carousel hidden-xs" data-slide="prev">-->
+							<!--<i class="fa fa-angle-left"></i>-->
+						<!--</a>-->
+						<!--<a href="#slider-carousel" class="right control-carousel hidden-xs" data-slide="next">-->
+							<!--<i class="fa fa-angle-right"></i>-->
+						<!--</a>-->
+					<!--</div>-->
+					<!-- -->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</section>-->
+	<!--/slider-->
 	
 	<section>
 		<div class="container">
@@ -358,7 +363,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 										<div class="productinfo text-center">
-											<img src="images/home/product1.jpg" alt="" />
+											<img src="/static/images/placeholder.jpg" alt="" />
 											<h2>$56</h2>
 											<p>Easy Polo Black Edition</p>
 											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -383,7 +388,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/home/product2.jpg" alt="" />
+										<img src="/static/images/placeholder.jpg" alt="" />
 										<h2>$56</h2>
 										<p>Easy Polo Black Edition</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -408,7 +413,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/home/product3.jpg" alt="" />
+										<img src="/static/images/placeholder.jpg" alt="" />
 										<h2>$56</h2>
 										<p>Easy Polo Black Edition</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -433,7 +438,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/home/product4.jpg" alt="" />
+										<img src="/static/images/placeholder.jpg" alt="" />
 										<h2>$56</h2>
 										<p>Easy Polo Black Edition</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -445,7 +450,7 @@
 											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
 									</div>
-									<img src="images/home/new.png" class="new" alt="" />
+									<img src="/static/images/placeholder.jpg" class="new" alt="" />
 								</div>
 								<div class="choose">
 									<ul class="nav nav-pills nav-justified">
@@ -459,7 +464,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/home/product5.jpg" alt="" />
+										<img src="/static/images/placeholder.jpg" alt="" />
 										<h2>$56</h2>
 										<p>Easy Polo Black Edition</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
@@ -485,7 +490,7 @@
 							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
-										<img src="images/home/product6.jpg" alt="" />
+										<img src="/static/images/placeholder.jpg" alt="" />
 										<h2>$56</h2>
 										<p>Easy Polo Black Edition</p>
 										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
