--- a/buylocalartor/templates/pdxart/index_new.html
+++ b/buylocalartor/templates/pdxart/index_new.html
@@ -84,7 +84,7 @@
 									<!--<li><a href="#">Pound</a></li>-->
 								<!--</ul>-->
 							<!--</div>-->
-						</div>
+						<!--</div>-->
 					</div>
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
@@ -1054,8 +1054,7 @@
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
-					<p class="pull-left">Copyright © 2013 E-SHOPPER Inc. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.themeum.com">Themeum</a></span></p>
+					<p class="pull-left">Copyright © 2015 Mike Bedney Jr | All rights reserved.</p>
 				</div>
 			</div>
 		</div>
@@ -1064,11 +1063,11 @@
 	
 
   
-    <script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.scrollUp.min.js"></script>
-	<script src="js/price-range.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/static/js/jquery.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
+	<script src="/static/js/jquery.scrollUp.min.js"></script>
+	<script src="/static/js/price-range.js"></script>
+    <script src="/static/js/jquery.prettyPhoto.js"></script>
+    <script src="/static/js/main.js"></script>
 </body>
 </html>
