--- a/buylocalartor/templates/pdxart/index_new.html
+++ b/buylocalartor/templates/pdxart/index_new.html
@@ -17,7 +17,7 @@
     <script src="/static/js/html5shiv.js"></script>
     <script src="/static/js/respond.min.js"></script>
     <![endif]-->
-	<!--TODO: Update for mobile when ready to go live-->
+	<!--TODO: Update for mobile when ready to go live!-->
     <!--<link rel="shortcut icon" href="/static/images/ico/favicon.ico">-->
     <!--<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/images/ico/apple-touch-icon-144-precomposed.png">-->
     <!--<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/images/ico/apple-touch-icon-114-precomposed.png">-->
